add the getProductByCriteriaTest